Changes since BUG 3.6:

New Features:
- Added optional BUG DLL; features that require it are marked with [DLL]
- Advanced Scoreboard: Added Refuse to Talk column (K) [DLL]

Improvements:
- BUG version is displayed when hovering over the flag [DLL]
- Min/Max Commerce Rate buttons have more accurate hover text [DLL]

Bug Fixes:


FOR MODDERS

New Features:
- Added BugDll module for creating Python features that depend on the DLL but work gracefully without it.

Bug Fixes:


________________________________________________________________________________
Changes since BUG 3.5.1:

New Features:

- Added map script "Maze" by Sirian
- Field of View slider on the main screen
- Improvements to stats tab on info screen
- Tick Marks for selected progress bars (tech, food, production)
- Tick Marks: Added whip threshold indicator to city production bar (look for yellow center tick mark)
- Added FoodAssist: net food added to stores per turn and turns until starvation
- Added EventSigns: plots whose yields change due to random events marked on the map with signs
- Added BUG Finance Advisor with detailed line items for Commerce and Income
- Added Min/Max Commerce Rate buttons: set any commerce rate to 0% or 100% with one click
- Added Gold Rate Warning: yellow gold rate when negative but not enough to go below zero
- Added Strategy Overlay: create a multicolored in-game dot map

Improvements:

- Customizable Domestic Advisor (CDA) now also resizable based on 2 new BUG options
- CDA: Added a "whip anger" column to CDA (not added to any pages)
- CDA: coloring options now allow reversed comparisons (i.e. higher numbers are worse)
- Show attitudes in leaderhead hovers in Exotic Foreign Advisor (EFA) Info tab and Military Advisor (MA)
- EFA Info tab: Added Domestic Trade total and correct detection of possibility of trade routes
- EFA Info tab: Added second trade column (for number of trade routes) to EFA Info Tab