@@ -7,6 +7,10 @@ New Features:
 Improvements:
 - BUG version is displayed when hovering over the flag [DLL]
 - Min/Max Commerce Rate buttons have more accurate hover text [DLL]
+- Foreign Advisor
+	- INFO page: Hover details for trade with each rival [DLL]
+	- RESOURCES page: Hover for bonuses the AI will not trade to you show the reason why [DLL]
+	- TECHS page: Hover for technologies the AI will not trade to you show the reason why [DLL]
 
 Bug Fixes:
 
